modify for show image

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 .DS_Store
+package-lock.json
+node_modules/formidable/benchmark-2020-01-29_xeon-x3440.png
+node_modules/formidable/LICENSE
+node_modules/formidable/package.json
+node_modules/formidable/README.md
+node_modules/formidable/lib/file.js
+node_modules/formidable/lib/incoming_form.js
+node_modules/formidable/lib/index.js
+node_modules/formidable/lib/json_parser.js
+node_modules/formidable/lib/multipart_parser.js
+node_modules/formidable/lib/octet_parser.js
+node_modules/formidable/lib/querystring_parser.js
